# midi-mcp

./: .gitignore  LICENCE  README.md
midi_output/: a_minor_sad_piano_ai.mid  beethoven_symphony5.mid  c_major_cheerful_piano_ai.mid  c_major_piano.mid  c_major_piano_ai.mid  c_major_piano_demo.mid  c_major_piano_piece.mid  century_difficulty_piano_masterpiece.mid  century_difficulty_piano_rhapsody.mid  classical_sonata.mid  d_minor_classical_waltz_ai.mid  demo_song.mid  elegant_piano_piece.mid  excited_piano.mid  extremely_difficult_piano_piece.mid  extremely_difficult_polyphonic_piano_piece.mid  f_major_jazz_piano_ai.mid  from_darkness_to_light.mid  healing_embrace.mid  liszt_campanella_style.mid  liszt_la_campanella_style.mid  melancholy_piano.mid  melodic_minor_chorus.mid  piano_chord_fun.mid  piano_chord_rich.mid  piano_composition.mid  piano_poly_rich.mid  piano_sonata_contemplation_transcendence.mid  piano_symphony_call_of_destiny.mid  pop_dreams.mid  rich_piano_composition.mid  rock_fast_drums_bass_ai.mid  uplifting_orchestral_adventure_ai.mid
src/: README.md  pyproject.toml  server.py
src/core/: __init__.py  config.py  exceptions.py  midi_operations.py  models.py  music_generators.py  music_theory.py
