[project]
name = "midi-mcp-server"
version = "1.0.0"
description = "完整的 MIDI 生成、編輯和演奏 Model Context Protocol 服務器"
readme = "README.md"
authors = [
    {name = "Auto MIDI Piano Project"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "mido>=1.3.3",
    "pygame>=2.6.1",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "main.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
